# fpds-os-analytics

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  SPRINT-7-TASKS.md  SPRINT-7-TEST-QUERIES.md  TASKS.md  audit-2026-07-13-utility.md  openapi.yaml  pyproject.toml  requirements.txt  run-local.sh
app/: __init__.py  auth.py  catalog.py  db.py  errors.py  main.py  mcp_internal_client.py  notices.py  oauth.py  query_builder.py  rate_limit.py
catalog/: datasets.yaml  dimensions.yaml
docs/: AI_ASSISTANT_GUIDE.md  ANALYST_VIEW_IMPROVEMENTS.md  ANALYTICS_SCHEMA_DESIGN.md  API_FUNCTIONS.md  CAVEATS.md  DATASETS.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN_V2.md  LAUNCH_CHECKLIST.md  LLM_INTEGRATIONS.md  METHODOLOGY.md  OPENCLAW_INTEGRATION.md  PACKAGING.md  PHASE2_BUILD_PLAN.md  QUICKSTART.md  S7-012b-FINDINGS.md  SCOPE-procurement-officer-analytics.md  SCOPE-vehicle-level-analytics.md  SECURITY_AUDIT_2026-06-03.md
mcp/: README.md  __init__.py  fpds_mcp_server.py
scripts/: harvest_fpds_atom_raw.py  manage_keys.py
skills/: README.md
sql/: 001_analytics_api_facade.sql  002_readonly_role_template.sql  003_supabase_public_hardening_template.sql  004_set_aside_facade.sql  005_competition_enrichment.sql  006_label_enrichment.sql  007_commercial_item.sql  008_parent_company_rollup.sql  009_prerequisite_dims.sql  010_build1_office_customer_profile.sql  011_build2_naics_agency_office.sql  012_build3_vendor_leaders.sql  013_build4_psc_analysis.sql  014_build5_vehicle_mix.sql  015_build6_funding_mismatch.sql  026_fiscal_seasonality.sql  (+55 more)
(+10395 files in other folders)
